# ChatAgent

./: .gitignore  ENGINEERING_STANDARDS.md  LICENSE  README.md  README_EN.md  README_ZH.md  commit_msg.txt  commit_raw.txt  docker-compose-milvus.yml  docker-compose-observability.yml  docker-compose-rabbitmq.yml  docker-compose.infra.yml  docker-compose.yml  start-local-gpu-backend.ps1  start-phase4-backend.cmd
tools/eval/: apply_question_review.py  capture_memory_lifecycle_baseline.py  collect_gemini_review.py  freeze_question_set.py  generate_memory_lifecycle_dataset.py  merge_gemini_rewrites.py  prepare_gemini_batch.py  prepare_gemini_diversify.py  prepare_gemini_review.py  prepare_gemini_rewrite.py  prepare_gemini_validation_retry.py  prepare_question_review.py  pyproject.toml  run_eval.py  run_memory_lifecycle.py  validate_gemini_questions.py
tools/eval/chatagent_eval/: __init__.py  agent_module_runner.py  answer_harness.py  control_analysis.py  datasets.py  deterministic_metrics.py  doc_ingestion_analysis.py  doc_ingestion_preflight.py  doc_ingestion_runner.py  evidence_bundle.py  joint_selection.py  memory_lifecycle_runner.py  memory_reference_runner.py  memory_runner.py  memory_semantic_analysis.py  memory_semantic_runner.py  memory_tuning_subset.py  parameters.py  prepare_phase3.py  promotion.py  promotion_report.py  question_set.py  rag_retrieval_runner.py  ragas_runner.py  reports.py  schemas.py  text_recall_runner.py  thresholds.py  tuning.py  tuning_runner.py
tools/eval/tests/: promotion_fixtures.py  test_agent_module_runner.py  test_answer_harness.py  (+23 more)
(+1878 files in other folders)
