[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chatagent-eval"
version = "0.1.0"
description = "Core contracts and runners for ChatAgent evaluation."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatagent_eval*"]
